--- a/index.html
+++ b/index.html
@@ -20,5 +20,305 @@
             <span>n</span>            
             
         </h1>
+        <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
+          <div class="circle-container">
+            <div class="circle"></div>
+          </div>
     </body>
 </html>
