--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<img class="background" src="" style="max-width:100%; height: auto;"/>
+<img class="background" src="https://scontent.fdel24-1.fna.fbcdn.net/v/t1.0-9/90263385_3562589627146392_6927914834088427520_o.jpg?_nc_cat=111&_nc_sid=cdbe9c&_nc_ohc=8J6r45-FMXYAX-qca1R&_nc_ht=scontent.fdel24-1.fna&oh=5d76431489992145756b3b39bd28bc9b&oe=5FB4ACDC" style="object-fit: cover; object-position: 50% 0;"/>
 
 
   <div class="text">
