--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <title>Pure CSS Particle Animation</title>
+  <title>Taarangana 2021</title>
 <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -19,6 +19,7 @@
         <span>i</span>
         <span>n</span>
         <span>g</span>
+        <span class="narrow"></span>
         <span style="padding-left:5%">S</span>
         <span>o</span>
         <span>o</span>
