--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
         <span>o</span>
         <span>n</span>
 
-    </h1>
+    </h1> 
+    <div class="festname">
+      <span style="color: aliceblue;">Taarangana 2021</span>
+    </div>  
   </div>
-
+  
+ 
   <script type="text/javascript" src="three.min.js">
 
   </script>
